--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -1,3 +1,19 @@
-<a href="/home">Home</a>
-<a href="/compte">Mon compte</a>
-<a href="/register">Création d'un compte</a>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style=" background: linear-gradient(#000000, #434343);font-family: Calibri, Candara, Segoe, Optima, Arial, sans-serif; font-size: 18px; font-style: normal;color:white;">
+  <ul class="navbar-nav">
+    <li class="nav-item active">
+      <a class="nav-link" href="/register">Inscription</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/compte">Mon compte</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/home">Acceuil</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/login">Connexion</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/logout">Déconexion</a>
+      </li>
+  </ul>
+</nav>
