--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,15 +1,28 @@
 {% extends 'base.html.twig' %}
 
+
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
-
+    <style>
+        .titre{text-align: center;}
+    </style>
+    
+    <div class='container'>
+        <div class='row' style="margin-left: 400px;">
+            <div class='col-4' >
+                <h1 class="titre">Register</h1>
+                <form action="/register" method="post">
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword) }}
+        {{ form_row(registrationForm.email,{'attr':{'class':'form-control'}}) }}
+        {{ form_row(registrationForm.plainPassword,{'attr':{'class':'form-control'}}) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button class="btn">Register</button>
+        <button class="btn btn-danger">Register</button>
     {{ form_end(registrationForm) }}
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
 {% endblock %}
